--- a/src/home/home.css
+++ b/src/home/home.css
@@ -28,11 +28,15 @@
     flex-direction: column;
     min-height: 100vh;
     background-color: black; 
-    margin-top: 4rem;
     margin-bottom: 4rem;
   }
  .home-img{
+  width: 100%;
+  border-radius: 5px;
     height: 33.5rem;
+ }
+ .home-img-div{
+  width:26rem;
  }
  .join-btn{
     width: 29rem;
@@ -41,7 +45,7 @@
     border-radius: .8rem;
     color: black;
     font-size: 18px;
-    margin: 2rem;
+    margin: .8rem;
     background-color: rgb(255,196,0);
  }
  ::placeholder{
@@ -91,7 +95,7 @@
   .home-div {
     display: flex;
     flex-direction: column;
-    width: 88%;
+    width: 79%;
 
     align-items: flex-start;
     padding: 20px;
@@ -131,6 +135,7 @@
   .span-text{
     color: rgb(255, 196, 0);
   }
+  
   .desc-div {
     font-family: 'Satoshi-Variable', sans-serif;
     font-style: normal;
