--- a/src/header/header.css
+++ b/src/header/header.css
@@ -12,6 +12,9 @@ margin-top:1rem;
     flex-direction: column;
     align-items: center; 
 }
+.about-link{
+    text-decoration: none;
+}
 .header-title {
     display: flex;
     justify-content: center;
@@ -24,7 +27,7 @@ margin-top: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 88%;
+    width: 79%;
 }
 
 .header-h1 {
