--- a/src/home/home.css
+++ b/src/home/home.css
@@ -36,7 +36,7 @@
     height: 33.5rem;
  }
  .home-img-div{
-  width:26rem;
+  width:35rem;
  }
  .join-btn{
     width: 29rem;
@@ -95,7 +95,7 @@
   .home-div {
     display: flex;
     flex-direction: column;
-    width: 79%;
+    width: 85%;
 
     align-items: flex-start;
     padding: 20px;
@@ -196,3 +196,133 @@ align-items: center;
     border-radius: 1rem;
     background-color: rgb(20, 20, 20);
   }
+
+  @media screen and (max-width:770px) {
+  .home-div{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .home-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+  }
+  
+  .home-img-div{
+    width:96%;
+  }
+.home-btn-div{
+  display: none;
+}
+.join-btn{
+  width: 29rem;
+  border: none;
+  height: 4rem;
+  border-radius: .8rem;
+  color: black;
+  font-size: 25px;
+  font-weight: 700;
+  margin: .8rem;
+  background-color: rgb(255,196,0);
+}
+::placeholder{
+  font-size: 22px;
+}
+.join-input{
+  padding-left: 10px; 
+  box-sizing: border-box;
+  width: 29rem;
+  border: none;
+  font-size: 1.4rem;
+  height: 4rem;
+  border-radius: .8rem;
+  background-color: white;
+}
+
+.wait-list-div{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 98%;
+  height: 19rem;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+  }
+
+@media screen and (max-width:600px ) {
+  .home-div{
+    width:90%;}
+    .user-h2{
+      font-size:1.4rem;
+    }
+    .user-div{
+      justify-content: space-between;
+      width:auto;
+      height: auto;
+    }
+    .user-p{
+      font-size: 1.1rem;
+    }
+}
+@media screen and (max-width:420px ) {
+  .home-div{
+    width:97%;}
+    .h1-desc-div>h1{
+      font-size: 1.6rem;
+      line-height: 1;
+    }
+    ::placeholder{
+      font-size: 15.5px;
+   }
+    
+    .join-input{
+      padding-left: 10px; 
+      width: 100%;
+      border: none;
+      font-size: 1.1rem;
+      height: 3rem;
+      border-radius: .8rem;
+      background-color: white;
+      box-sizing: border-box;
+      
+   }
+   .user-h2{
+    font-size:1.3rem;
+  }
+    .user-div{
+      border-radius: .1rem;
+      width:13rem;
+    }
+    .user-p{
+      font-size:1.1rem;
+    }
+    .desc-div{
+      font-size:1.4rem;
+    }
+}
+
+@media screen and (max-width:350px) {
+  .h1-desc-div{
+    width: 100%;
+  }
+  .user-div{
+    justify-content: space-between;
+    width:auto;
+    height: auto;
+  }
+  .home-desc{
+    width: 100%;
+  }
+
+  .home-div{
+    width: 100%;
+  }
+  .home-content{
+    width: 100%;
+  }
+}
