--- a/src/header/header.css
+++ b/src/header/header.css
@@ -3,50 +3,201 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    position: relative;
     background-color: black;
 }
+
 .header-title-h1 {
     display: flex;
-justify-content: center;
-margin-top:1rem;
+    justify-content: center;
+    margin-top: 1rem;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
 }
-.about-link{
+
+.about-link {
     text-decoration: none;
 }
+
 .header-title {
     display: flex;
     justify-content: center;
-margin-top: 2rem;
+    margin-top: 2rem;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
 }
 
 .header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 79%;
+    margin-bottom: 1rem;
+    position: relative;
+    width: 85%;
 }
 
 .header-h1 {
+    font-size: 2.3rem;
+    margin-left: .6rem;
     color: rgb(250, 242, 228);
 }
 
 .header-h4 {
     color: #d8d5d5;
-    border-bottom: 3px solid rgb(255, 196, 0) ;
-    margin-top: 5px; 
-    padding-bottom: 1px; 
+    border-bottom: 3px solid rgb(255, 196, 0);
+    margin-top: 5px;
+    padding-bottom: 1px;
     display: inline;
-
 }
 
-/* Ensure hr has no margin or padding */
-.header-hr {
-    border: 1px solid goldenrod;
-    margin: 0; /* Remove all margins */
-    padding: 0; /* Remove all padding */
-    width: 100%; /* Adjust width as needed */
+.header-signup-btn, .header-login-btn {
+    width: 6rem;
+    height: 2.4rem;
+    margin-top: .2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    border-radius: .2rem;
+    background-color: black;
+    border: 1px solid rgb(255, 196, 0);
+    font-size: 1rem;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color:rgb(255, 196, 0);;
+}
+
+.about-login-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: auto;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 80vh;
+    background-color: black;
+    color: #fcf7f7;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.sidebar.open {
+    transform: translateX(0);
+}
+
+.sidebar-close-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width:3rem;
+    margin-top: .5rem;
+    margin-right: .5rem;
+    border-radius: 50%;
+    border:3px solid rgb(255, 196, 0);
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #fcf7f7;
+}
+
+.sidebar-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    line-height: 1.5;
+}
+
+.sidebar-link {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: rgb(255,196,0);
+    font-size: 1.4rem;
+}
+.sidebar-toggle {
+    display: none;
+    color: white;
+    font-size: 2.4rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.close-icon{
+    font-size: 2.5rem;
+}
+@media screen and (min-width: 701px) {
+    .about-login-div {
+        display: flex;
+    }
+    
+   
+}
+
+@media screen and (max-width: 770px) {
+   
+    .about-login-div {
+        display: none;
+    }
+    .sidebar-toggle {
+        display:block;
+        color: white;
+        margin-top: 1rem;
+        font-size: 2.4rem;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+    .sidebar {
+        display: flex;
+    }
+    
+      .btn-sidebar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: .2rem;
+        width: 10rem;
+        font-size: 1.2rem;
+        height:3rem;
+        background-color: rgb(255,196,0);
+      }
+      .btn2-sidebar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 1px;
+        font-size: 1.2rem;
+        width: 10rem;
+        border: 2px solid rgb(255,196,0);
+        color: rgb(255,196,0);
+        height: 3rem;
+        background-color: rgb(32, 32, 31);
+      }
+      .sidebar-btn-div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        line-height: 2;
+        height: auto;
+        background-color: red;
+        
+      }
+      
 }
