--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=poppins:wght@300;400;500;600&display=swap');
+*{
+  margin: 0;
+  padding:0;
+  border:0;
+  outline:0;
+  list-style:none;
+  box-sizing:border-box;
+  text-decoration:none;
+  overflow-x: hidden;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
