--- a/src/home/home.css
+++ b/src/home/home.css
@@ -172,8 +172,8 @@ color: rgb(173, 169, 169);
     height: 1.8rem;
   }
   .user-h2{
-    font-family: satosh;
-    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
     color:rgb(202, 201, 201) !important;
   }
   .user-p{
@@ -190,11 +190,15 @@ margin-top: 1.5rem;
 -webkit-box-align: center; 
 justify-content: center; 
 align-items: center;
-    width: 240px;
+    width: auto;
+    width:14rem;
+    
     gap: .5rem;
-    height: 3.3rem;
+    padding: 0;
+    height: 2.8rem;
     border-radius: 1rem;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(32, 32, 31);
+
   }
 
   @media screen and (max-width:770px) {
