--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,10 @@ html, body {
   padding: 0;
   overflow-x: hidden;
 }
+
+.app{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
