--- a/src/mail/mail.css
+++ b/src/mail/mail.css
@@ -29,8 +29,10 @@
     background-color: rgb(255, 196, 0);
     color: white;
     font-weight: 500;
+    padding: 10px;
     font-size: 1.1rem;
     border: none;
+    width: 95x;
     border-radius: 5px;
     cursor: pointer;
   }
@@ -40,33 +42,45 @@
    
    .mailInputContainer>input{
     width: 280px;
-    height: 60px;
+    height: 50px;
     border: none;
     margin-right: 0;
     border-radius: 5px;
   }
   .mailInputContainer>button{
-    height: 60px;
+    height: 50px;
     background-color: rgb(255, 196, 0);
     color: white;
     margin-left:.5rem;
     font-weight: 500;
     font-size: 1.1rem;
     border: none;
+    width:280px;
     border-radius: 5px;
     cursor: pointer;
+  }
+  .mailInputContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 100%;
   }
   }
 
   @media screen and (max-width:550px){
+    .mailInputContainer{
+      width: 100%;
+    }
     .mailInputContainer>button{
-      height:50px;
-      width: 98%;
+      height:40px;
+      width: 100%;
       font-size: 1.2rem;
     }
     .mailInputContainer>input{
-      width: 98%;
-      height: 50px;
+      width: 100%;
+      height: 40px;
       
     }
     .mailInputContainer{
@@ -77,4 +91,14 @@
       align-items: center;
       flex-direction: column;
      }
+  }
+  @media screen and (max-width:490px) {
+    .mailInputContainer{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 1.5rem;
+      width: 100%;
+    }
   }
