--- a/src/about/about.css
+++ b/src/about/about.css
@@ -32,7 +32,7 @@
 }
 .about-hr{
     border: 1px solid rgb(255, 196, 0);
-    width: 79%;
+    width: 84%;
 
 }
 
@@ -914,6 +914,10 @@ h1{
         width: 100%;
     }
     .sarto-text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         width: 100%;
         height: 100%;
     }
@@ -950,7 +954,6 @@ h1{
         text-align:center;
         border:1px solid gold;
         width:98%;
-        background-color: yellow;
         line-height: 1.5rem;
         overflow-y: hidden;
 
