--- a/src/create/create.css
+++ b/src/create/create.css
@@ -9,19 +9,17 @@
     display: flex;
     justify-content: flex-start;
     width: 90%;
+    height: 2.5rem;
+    margin-top: 1rem;
   }
   
-  .login-h2 {
+  .join-h2 {
     text-align: left;
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: white;
   }
   
-  .login-hr {
-    width: 40%;
-    margin-top: .8rem;
-    border-color: rgba(83, 100, 113, 1.00);
-  }
+  
   
   .input-div {
     display: flex;
@@ -35,10 +33,7 @@
     background-color: black;
   }
   
-  .or-text {
-    font-size: 1.2rem;
-    color: rgb(61, 60, 60);
-  }
+  
   
   .hr-div {
     display: flex;
@@ -48,16 +43,9 @@
     margin-top: .5rem;
   }
   
-  .reset-pwd-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 0, 0, 0);
-    width: 80%;
-    height: 40px;
-    border-radius: 20px;
-    border: 1px solid rgb(83, 100, 113);
-    margin-top: .5rem;
+  .policys-div{
+    text-align: center;
+    width: 70%;
   }
   
   .signup-text {
@@ -147,11 +135,11 @@
   
  
   
-  .login-btn {
+  .logins-btn {
     background-color: rgb(239, 243, 244);
     border-color: rgba(0, 0, 0, 0);
     text-overflow: unset;
-    width: 100%;
+    width: 98%;
     height: 40px;
     font-size: 1rem;
     font-weight: bold;
@@ -161,18 +149,7 @@
     margin-bottom: 1rem;
   }
   
-  .google-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    width: 80%;
-    background-color: rgb(231, 233, 234);
-    height: 50px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    margin-bottom: 1rem;
-  }
+ 
   
   ::placeholder {
     color: rgba(83, 100, 113, 1.00);
