--- a/src/login/login.css
+++ b/src/login/login.css
@@ -7,14 +7,14 @@
     background-color: rgba(20, 20, 20, 0.6);
 
 }
-.h2-div{
+.h2s-div{
     display: flex;
     width: 100%;
 }
-.login-hr{
-    width: 40%;
-    margin-top: .8rem;
-    border-color:rgba(83,100,113,1.00); 
+.hr-log{
+    width: 42%;
+    margin-top:.5rem;
+    border: 1px solid rgb(75, 74, 74); 
 }
 .input-div{
     display:flex;
@@ -36,25 +36,26 @@ border-radius: 10px;
     text-decoration: none;
     position: relative;
 }
-.or-text{
+.or-texts{
     font-size: 1.2rem;
-    color: rgb(61, 60, 60);
+    color: rgb(141, 139, 139);
 }
 .hr-div{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 85%;
+    gap: .5rem;
+    width: 80%;
     margin-top: .5rem;
 
 }
-.reset-pwd-div{
+.reset-pwd-divs{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0,0);
     width: 80%;
-    height: 40px;
+    height: auto;
     border-radius: 20px;
     border: 1px solid rgb(83,100,113);
     margin-top: .5rem;
@@ -87,9 +88,9 @@ border-radius: 10px;
 .signup-link{
     text-decoration: none;
 }
-.reset-pwd-btn{
+.reset-pwd-btns{
     width: 100%;
-    height: 40px;
+    height: 42px;
     font-size: 1rem;
     border-radius: 20px;
     color: rgb(239, 243, 244);
@@ -107,7 +108,7 @@ border-radius: 10px;
     border: none;
     background-color: rgb(19, 18, 18);
 }
-.next-btn-div{
+.next-btns-div{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,13 +126,13 @@ border-radius: 10px;
     height: 50px;
     margin-bottom: 1rem;
 }
-.loginbtn{
+.loginbtns{
   background-color:   rgb(239, 243, 244);
   border-color: rgba(0, 0, 0, 0);
   text-overflow: unset; 
   width: 80%;
 
-  height: 42px !important;
+  height: 42px ;
   font-size: 1rem;
   font-weight: bold;
   border-radius: 20px;
@@ -139,19 +140,21 @@ border-radius: 10px;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.login-h2{
+.logins-h2{
     margin-left:2rem ;
+    font-size: 1.8rem;
     float: left;
     color: rgb(231, 233, 234);
 }
-.google-div{
+.google-login-div{
     display: flex;
 justify-content: center;
 align-items: center;
 border-radius: 10px;
+margin-top: 1rem;
     width:80%;
     background-color: rgb(231, 233, 234);
-    height: 30px !important;
+    height: 2.5rem;
     margin-bottom: 1rem;
 }
 ::placeholder{
