--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -27,10 +27,10 @@
   
  
   
-.login-hr{
-    width: 40%;
-    margin-top: .8rem;
-    border-color:rgba(83,100,113,1.00); 
+.logs-hr{
+    width: 42%;
+    margin-top: .5rem;
+    border: 1px solid rgb(75, 74, 74); 
 }
 .input-div{
     display:flex;
@@ -53,9 +53,9 @@ border-radius: 10px;
     text-decoration: none;
     position: relative;
 }
-.or-text{
+.or-texts{
     font-size: 1.2rem;
-    color: rgb(61, 60, 60);
+    color: rgb(141, 139, 139);
 }
 .hr-div{
     display: flex;
@@ -99,12 +99,12 @@ border-radius: 10px;
     border: none;
     background-color: rgb(19, 18, 18);
 }
-.next-btn-div{
+.nexts-btn-div{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 48px;
+    height: auto;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
@@ -119,6 +119,7 @@ border-radius: 10px;
    
 }
 .policy-div{
+    text-align: center;
     width: 70%;
 }
 .signup-span-text{
@@ -138,7 +139,7 @@ border-radius: 10px;
   background-color:   rgb(239, 243, 244);
   border-color: rgba(0, 0, 0, 0);
   text-overflow: unset; 
-  width: 80%;
+  width: 75%;
   height: 44px;
   font-size: 1rem;
   font-weight: bold;
@@ -148,14 +149,14 @@ border-radius: 10px;
   margin-bottom: 1rem;
 }
 
-.google-div{
+.googles-div{
     display: flex;
 justify-content: center;
 align-items: center;
 border-radius: 10px;
-    width:80%;
+    width:75%;
     background-color:   rgb(239, 243, 244);
-    height: 33px;
+    height: 2.5rem;
     
 }
 ::placeholder{
